Add run task for Gradle